<resources>
    <string name="app_name">Goshna Airlines</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_setup">Input Flight Info</string>
    <string name="title_activity_message">Create an Announcement</string>

    <string name="preferences">goshnaairlinesprefs</string>
    <string name="preferences_gate">gate</string>
    <string name="preferences_flight_id">flight_id</string>

    <string name="retry">Retry</string>
    <string name="submit">SUBMIT</string>

    <string name="airline">Airline:</string>
    <string name="gate">Gate:</string>
    <string name="flight_number">Flight Number:</string>
    <string name="destination">Destination:</string>

    <string name="departure">Departure Time:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="gate_header">Or go back to your current gate:</string>
    <string name="no_gate">NO CURRENT GATE</string>

    <string name="speak">SPEAK</string>
    <string name="clear">CLEAR</string>

    <string name="empty_gate">Please enter a gate number.</string>
    <string name="empty_dest">Please enter an airport acronym.</string>
    <string name="empty_flight">Please enter a valid flight number (only numbers).</string>
    <string name="empty_date">Please enter a valid time.</string>
    <string name="bad_flight">Could not create flight.</string>


    <string name="message_submitted">Message sent</string>
    <string name="bad_message">Could not post announcement to server.</string>
</resources>
